# tide

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  GEMINI.md  README.md  readme.md
.claude/: settings.json
config/: tide.toml.example
docs/: architecture.md  block-architecture.md  block-export.md  block-layer.md  config.md  internal-api.md  manual-testing.md  raw-program.md  zsh-integration.md
docs/superpowers/plans/: 2026-05-14-agent-dashboard.md  2026-05-14-event-driven-watcher.md  2026-05-14-fix-broken-build-and-cleanup.md  2026-05-14-log-cleanup.md  2026-05-14-opencode-enhancements.md  2026-05-14-seamless-integration.md  2026-05-14-structured-logging.md
docs/superpowers/specs/: 2026-05-14-log-cleanup-design.md  2026-05-14-structured-logging-design.md
shell/: zsh-integration.zsh
src/: agent_events.rs  agent_registry.rs  ansi.rs  app.rs  block.rs  block_export.rs  buffer.rs  cli.rs  compositor.rs  config.rs  debug_log.rs  format.rs  index.rs  main.rs  opencode_registry.rs  pty.rs  renderer.rs  shell_hooks.rs  theme.rs  ui.rs
