[package]
name = "tide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.4"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
